# AIVUS-OCT

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  pytest.ini
docs/: CONTRIBUTING.md  Makefile  conf.py  index.rst  requirements.txt
docs/contents/: api_references.rst  installation.rst  key_features.rst  related_projects.rst  tutorial.rst  usage.rst
src/: config.yaml  main.py  version.py
src/gating/: automatic_gating.py  contour_based_gating.py  signal_processing.py
src/gui/: gui.py  shortcuts.py
src/gui/left_half/: IVUS_display.py  left_half.py
src/gui/popup_windows/: frame_range_dialog.py  message_boxes.py  results_plot.py  small_display.py  video_player.py
src/gui/right_half/: gating_display.py  longitudinal_view.py  right_half.py
src/gui/utils/: contours_gui.py  geometry.py  geometry_py.py  helpers.py  slider.py
src/input_output/: contours_io.py  metadata.py  read_image.py  read_xml.py  write_xml.py
src/report/: report.py
src/segmentation/: predict.py  save_as_nifti.py  segment.py  segment_files.py
src/segmentation_train/: .gitignore  README.md  configs.py  data_preprocessing.py  ivus_3d_to_2d.py  metrics.py  models.py  predict.py  requirements.txt  train.py  utils.py
test_cases/: anonymized_contours_1_1_1.json  anonymized_report.txt
tests/: conftest.py  pytest.ini  test_geometry.py  test_left_half.py  test_main.py  test_master_gui.py  test_shortcuts.py
