[tool.poetry]
name = "aivus-oct"  # Updated name
version = "1.1.0"
description = "AIVUS-OCT: AI for Optical Coherence Tomography"
authors = ["yungselm", "cardionaut", "Pooya Mohammadi Kazaj"]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
loguru = "*"
tqdm = "*"
matplotlib = "*"
pandas ="*"
scipy = "*"
scikit-image = "*"
seaborn = "*"
pylint = "*"
hydra-core = "*"
omegaconf = "*"
numpy = "1.26.4"
pydicom = "2.4.4"
pylibjpeg = "*"
pylibjpeg-libjpeg = "*"
# Swapped PyQt5 for PyQt6
PyQt6 = "^6.10.2"
pyqtdarktheme = "^2.1.0"
shapely = "*"
SimpleITK = "*"
opencv-python-headless = "^4.9.0.80"

[tool.poetry.group.dev.dependencies]
autohooks = "^23.1.0"
autohooks-plugin-black = "^22.11.0"
autohooks-plugin-isort = "^22.8.0"
pytest = "^7.2.1"
pytest-qt = "^4.4.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
black = "^22.6.0"
isort = "^5.10.1"

[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.isort"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"